# fauna

./: .gitignore  AGENTS.md  CHANGES.md  CMakeLists.txt  FAUNA.jucer  JOURNEY.md  PLAN.md  README.md  WEBSOCKET_DEBUG.md  build.ps1  cmake-plan.md  fauna-mobile-browser.html  fauna-plugin-ui.html  iphone issue.md  iphone-audio-research.md  macversion-plan-1.md  mistakes.md  project-status.md  workflow.md
.github/workflows/: build.yml
Source/: AudioStreamer.cpp  AudioStreamer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  QrCode.cpp  QrCode.hpp  WebServer.cpp  WebServer.h
web/: index.html
